# justify

./: .gitignore  Basic.hs  BasicJustifiers.hs  Common.hs  Doc.hs  Indent.hs  IndentsAndLineLengths.hs  Main.hs  Rich.hs  Shape.hs  justify.cabal  lipsum.txt  stack.yaml
