name:                justify
version:             0.0.0.0
license:             MIT
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple
cabal-version:       >=1.10

executable justify
  main-is:             Main.hs
  other-modules:       Common, BasicJustifiers
  build-depends:       base, gd, hyphenation
  default-language:    Haskell2010
