name:                justify
version:             0.0.0.0
license:             MIT
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple
cabal-version:       >=1.10

executable justify
  main-is:             Main.hs
  other-modules:       Basic, Common, Indent, Rich, Shape, IndentsAndLineLengths, Doc
  build-depends:       base, filepath, gd, hyphenation
  default-language:    Haskell2010
  ghc-options:         -Wall
